[package]
name = "mee"
version = "0.1.0"
authors = ["QQ <me@quang.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = "0.6.1"
# crossterm = "0.14"


[dependencies.crossterm]
version = "0.14"
features = ["event-stream"]